# NED

./: .gitignore  README.md  balance.py  create_flowset.py  create_videoset.py  pyproject.toml
dataloaders/: image_dataset.py
datility/: dataset.py  structures.py  utils.py  videoset.py
notebooks/: KFold_12_Delta_TFW_LSTM_Classifcation_on_Neo_Echoset.ipynb  KFold_12_LSTM_Classifcation_on_Neo_Echoset.ipynb  KFold_12_TFW_LSTM_Classifcation_on_Neo_Echoset.ipynb  KFold_Attention_LSTM_Classifcation_on_Neo_Echoset.ipynb  KFold_Classifcation_on_Neo_Echoset.ipynb  KFold_Majority_Vote_Classifcation_on_Neo_Echoset.ipynb
